--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="contact">
         <div><i class="fa-solid fa-envelope"></i> <a href="mailto:andre.tum91@gmail.com">andre.tum91@gmail.com</a></div>
         <div><i class="fa-brands fa-telegram"></i> <a href="https://t.me/funnymilk">@funnymilk</a></div>
-        <div><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/andre-y-tumbaev">LinkedIn</a></div>
+        <div><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/andrey-tumbaev-726b59212">LinkedIn</a></div>
         <div><i class="fa-brands fa-github"></i> <a href="https://github.com/funnymilk">GitHub</a></div>
       </div>
     </div>
