add SQL certificate

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         <li><strong>БД:</strong> PostgreSQL</li>
         <li><strong>Инфраструктура:</strong> Docker / docker compose, GitHub Actions (CI), Poetry</li>
         <li><strong>Интеграции:</strong> Kafka (producer/consumer), SMTP-уведомления</li>
+        <li>
+          <strong>SQL Fundamentals</strong> — Stepik
+          <a href="https://stepik.org/cert/3065874" target="_blank" class="cert-link">
+            🔗&nbsp;Certificate
+          </a>
+        </li>
       </ul>
     </div>
   </aside>
