--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
       <div style="font-weight:600">Инженер-программист</div>
       <div style="color:#374151">Тольяттинский социально-экономический колледж</div>
       <div style="color:#6b7280">2006 — 2010</div>
+      <div style="margin-top:10px;color:#6b7280;font-size:0.95em">
+        <strong style="color:#111827">Сертификат:</strong>
+        SQL Fundamentals — Stepik
+        <a href="https://stepik.org/cert/3065874" class="cert-link" target="_blank" style="margin-left:6px;text-decoration:none;white-space:nowrap">
+          <i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Certificate
+        </a>
+      </div>
       <hr style="border:none;border-top:1px solid #e5e7eb;margin:18px 0">
       <div class="section-title">НАВЫКИ</div>
       <ul>
@@ -40,12 +47,6 @@
         <li><strong>БД:</strong> PostgreSQL</li>
         <li><strong>Инфраструктура:</strong> Docker / docker compose, GitHub Actions (CI), Poetry</li>
         <li><strong>Интеграции:</strong> Kafka (producer/consumer), SMTP-уведомления</li>
-        <li>
-          <strong>SQL Fundamentals</strong> — Stepik
-          <a href="https://stepik.org/cert/3065874" target="_blank" class="cert-link">
-            🔗&nbsp;Certificate
-          </a>
-        </li>
       </ul>
     </div>
   </aside>
