--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
 
     <div class="col-block">
-      <div class="footer-note">Последнее обновление: Ноябрь 2025</div>
+      <div class="footer-note">Последнее обновление: Январь 2026</div>
     </div>
   </main>
 </div>
